tests/baselines/reference/subtypingWithNumericIndexer5.errors.txt
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer5.ts(11,7): error TS2420: Class 'B' incorrectly implements interface 'A'.
  Index signatures '[string]: Base' and '[number]: Derived' are incompatible.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer5.ts(32,11): error TS2420: Class 'B3<T>' incorrectly implements interface 'A<T>'.
  Index signatures '[string]: Base' and '[number]: T' are incompatible.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer5.ts(36,11): error TS2420: Class 'B4<T>' incorrectly implements interface 'A<T>'.
  Index signatures '[string]: Derived' and '[number]: T' are incompatible.
tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer5.ts(40,11): error TS2420: Class 'B5<T>' incorrectly implements interface 'A<T>'.
  Index signatures '[string]: Derived2' and '[number]: T' are incompatible.


==== tests/cases/conformance/types/typeRelationships/subtypesAndSuperTypes/subtypingWithNumericIndexer5.ts (4 errors) ====
    // Derived type indexer must be subtype of base type indexer
    
    interface Base { foo: string; }
    interface Derived extends Base { bar: string; }
    interface Derived2 extends Derived { baz: string; }
    
    interface A {
        [x: number]: Derived;
    }
    
    class B implements A {
          ~
!!! error TS2420: Class 'B' incorrectly implements interface 'A'.
!!! error TS2420:   Index signatures '[string]: Base' and '[number]: Derived' are incompatible.
        [x: string]: Base; // error
    }
    
    class B2 implements A {
        [x: string]: Derived2; // ok
    }
    
    module Generics {
        interface A<T extends Base> {
            [x: number]: T;
        }
    
        class B implements A<Base> {
            [x: string]: Derived; // ok
        }
    
        class B2 implements A<Derived> {
            [x: string]: Derived2; // ok
        }
    
        class B3<T extends Derived> implements A<T> {
              ~~
!!! error TS2420: Class 'B3<T>' incorrectly implements interface 'A<T>'.
!!! error TS2420:   Index signatures '[string]: Base' and '[number]: T' are incompatible.
            [x: string]: Base; // error
        }
    
        class B4<T extends Derived> implements A<T> {
              ~~
!!! error TS2420: Class 'B4<T>' incorrectly implements interface 'A<T>'.
!!! error TS2420:   Index signatures '[string]: Derived' and '[number]: T' are incompatible.
            [x: string]: Derived; // error
        }
    
        class B5<T extends Derived2> implements A<T> {
              ~~
!!! error TS2420: Class 'B5<T>' incorrectly implements interface 'A<T>'.
!!! error TS2420:   Index signatures '[string]: Derived2' and '[number]: T' are incompatible.
            [x: string]: Derived2; // error
        }
    }